--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -28,10 +28,10 @@ jobs:
 
       - name: Terraform init
         run: |
-          if [[ ${{ github.event_name }} == 'push' && (${{ github.event_path }} == *"root/modules"* 
+          if [[ ${{ github.event_name }} == 'push' && (${{ github.event_path }} == *"root/modules"*) ]]; then
             terraform init -detailed-exitcode
           else
-            echo "No Terraform plan necessary for this directory."
+            echo "No Terraform initialization necessary for this directory."
           fi
 
       - name: Terraform validate
@@ -39,12 +39,12 @@ jobs:
 
       - name: Terraform plan
         run: |
-          if [[ ${{ github.event_name }} == 'push' && (${{ github.event_path }} == *"root/env/dev"* || ${{ github.event_path }} == *"root/env/test"* || ${{ github.event_path }} == *"root/env/prod"*) ]] && && steps.terraform_init.outputs.exitcode == '0'; then
+          if [[ ${{ github.event_name }} == 'push' && (${{ github.event_path }} == *"root/env/dev"* || ${{ github.event_path }} == *"root/env/test"* || ${{ github.event_path }} == *"root/env/prod"*) ]] && [[ steps.terraform_init.outputs.exitcode == '0' ]]; then
             terraform plan -detailed-exitcode
           else
             echo "No Terraform plan necessary for this directory."
           fi
 
       - name: Terraform apply
-        if: github.event.pull_request.merged == true && steps.terraform_plan.outputs.exitcode == '0'
+        if: github.event_name == 'pull_request' && github.event.pull_request.merged == true && steps.terraform_plan.outputs.exitcode == '0'
         run: terraform apply --auto-approve
