--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ terraform.rc
 
 ### JetBrains Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
-
+*.idea
 *.iml
 modules.xml
 .idea/misc.xml
