--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -46,9 +46,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Terraform init (test)
-        run:
-          cd ${{ github.workspace }}/env/dev
-          terraform init
+        run:  terraform -chdir="./env/test" init
 
   init_prod:
     needs: setup
@@ -59,9 +57,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Terraform init (prod)
-        run:
-          cd ${{ github.workspace }}/env/prod
-          terraform init
+        run:  terraform -chdir="./env/prod" init
 
   validate:
     needs: [init_dev, init_test, init_prod]
@@ -91,19 +87,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Terraform plan (dev)
-        run:
-          cd ${{ github.workspace }}/env/dev
-          terraform plan -detailed-exitcode
+        run:  terraform -chdir="./env/dev" plan
 
       - name: Terraform plan (test)
-        run:
-          cd ${{ github.workspace }}/env/test
-          terraform plan -detailed-exitcode
+        run:  terraform -chdir="./env/test" plan
 
       - name: Terraform plan (prod)
-        run:
-          cd ${{ github.workspace }}/env/prod
-          terraform plan -detailed-exitcode
+        run:  terraform -chdir="./env/prod" plan
 
   apply:
     needs: plan
