--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -35,6 +35,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Terraform init (dev)
+        if: success() || failure()
         run:  terraform -chdir="./env/dev" init
 
   init_test:
@@ -46,6 +47,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Terraform init (test)
+        if: success() || failure()
         run:  terraform -chdir="./env/test" init
 
   init_prod:
@@ -57,6 +59,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Terraform init (prod)
+        if: success() || failure()
         run:  terraform -chdir="./env/prod" init
 
   validate:
@@ -79,7 +82,6 @@ jobs:
         run: terraform validate
 
   plan:
-    needs: validate
     runs-on: ubuntu-latest
 
     steps:
