--- a/.gitignore
+++ b/.gitignore
@@ -32,12 +32,10 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
-
-### JetBrains Patch ###
-# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
-*.idea
-*.iml
-modules.xml
-.idea/misc.xml
-*.ipr
-
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/terra.ai.iml
+/.idea/vcs.xml
