try workspace in dev

--- a/.github/workflows/terraform-dev.yml
+++ b/.github/workflows/terraform-dev.yml
@@ -37,7 +37,7 @@ jobs:
         id: init
         run: |
           terraform -chdir="./env/dev" init -input=false
-          terraform workspace show
+          terraform workspace select dev
 
       - name: Terraform Plan
         id: plan
