--- a/.github/workflows/terraform-dev.yml
+++ b/.github/workflows/terraform-dev.yml
@@ -46,30 +46,24 @@ jobs:
           terraform -chdir="./env/dev" plan -input=false -no-color
         continue-on-error: true
 
-      - uses: actions/github-script@0.9.0
+      - name: Comment on push
         if: github.event_name == 'push'
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
-          script: |
-            const output = `#### Terraform Format and Style \`${{ steps.fmt.outcome }}\`
-            #### Terraform Initialization ️\`${{ steps.init.outcome }}\`
-            #### Terraform Plan \`${{ steps.plan.outcome }}\`
+        run: |
+          echo "#### Terraform Format and Style \`${{ steps.fmt.outcome }}\`
+          #### Terraform Initialization ️\`${{ steps.init.outcome }}\`
+          #### Terraform Plan \`${{ steps.plan.outcome }}\`
 
-            <details><summary>Show Plan</summary>
+          <details><summary>Show Plan</summary>
 
-            \`\`\`${process.env.PLAN}\`\`\`
+          \`\`\`${process.env.PLAN}\`\`\`
 
-            </details>
+          </details>
 
-            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+          *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*" >> comment.txt
 
-              
-            github.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            })
+          gh issue comment ${{ github.event.issue.number }} --body "$(cat comment.txt)"
 
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
@@ -78,4 +72,3 @@ jobs:
       - name: Terraform Apply
         if: github.ref == 'refs/heads/develop' && github.event_name == 'pull_request' && github.event.pull_request.merged == true
         run: terraform -chdir="./env/dev" apply -auto-approve
-
