--- a/.github/workflows/terraform-dev.yml
+++ b/.github/workflows/terraform-dev.yml
@@ -51,17 +51,15 @@ jobs:
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
         run: |
-          echo "#### Terraform Format and Style \`${{ steps.fmt.outcome }}\`
-          #### Terraform Initialization ️\`${{ steps.init.outcome }}\`
-          #### Terraform Plan \`${{ steps.plan.outcome }}\`
-
+          const output = '#### Terraform Format and Style 🖌`${{ steps.fmt.outcome }}`
+          #### Terraform Initialization ⚙️`${{ steps.init.outcome }}`
+          #### Terraform Plan 📖`${{ steps.plan.outcome }}`
+          
           <details><summary>Show Plan</summary>
-
-          \`\`\`${process.env.PLAN}\`\`\`
-
-          </details>
-
-          *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*" >> comment.txt
+          
+          ```' + process.env.PLAN + '```' + '</details>
+          
+          *Pusher: @' + github.actor + ', Action: `' + github.event_name + '`*';
 
           gh issue comment ${{ github.event.issue.number }} --body "$(cat comment.txt)"
 
