--- a/.github/workflows/terraform-dev.yml
+++ b/.github/workflows/terraform-dev.yml
@@ -51,15 +51,17 @@ jobs:
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
         run: |
-          const output = '#### Terraform Format and Style 🖌`${{ steps.fmt.outcome }}`
-          #### Terraform Initialization ⚙️`${{ steps.init.outcome }}`
-          #### Terraform Plan 📖`${{ steps.plan.outcome }}`
-          
-          <details><summary>Show Plan</summary>
-          
-          ```' + process.env.PLAN + '```' + '</details>
-          
-          *Pusher: @' + github.actor + ', Action: `' + github.event_name + '`*';
+          echo "::set-env name=PLAN::$(terraform -chdir='./env/dev' plan -input=false -no-color)"
+          node -e "
+          const output = '#### Terraform Format and Style 🖌${{ steps.fmt.outcome }}\n' +
+          '#### Terraform Initialization ⚙️${{ steps.init.outcome }}\n' +
+          '#### Terraform Plan 📖${{ steps.plan.outcome }}\n' +
+          '<details><summary>Show Plan</summary>\n' +
+          '```\n' +
+          process.env.PLAN +
+          '\n```\n' +
+          '</details>\n' +
+          '*Pusher: @${{ github.actor }}, Action: `${{ github.event_name }}`*';"
 
           gh issue comment ${{ github.event.issue.number }} --body "$(cat comment.txt)"
 
