--- a/.github/workflows/terraform-dev.yml
+++ b/.github/workflows/terraform-dev.yml
@@ -51,15 +51,15 @@ jobs:
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
         run: |
-          #### Terraform Format and Style 🖌`${{ steps.fmt.outcome }}`
-          #### Terraform Initialization ⚙️`${{ steps.init.outcome }}`
-          #### Terraform Plan 📖`${{ steps.plan.outcome }}`
-          
-          <details><summary>Show Plan</summary>
-          
-          ```' + process.env.PLAN + '```' + '</details>
-          
-          *Pusher: @' + github.actor + ', Action: `' + github.event_name + '`*';
+          echo "#### Terraform Format and Style 🖌${{ steps.fmt.outcome }}"
+          echo "#### Terraform Initialization ⚙️${{ steps.init.outcome }}"
+          echo "#### Terraform Plan 📖${{ steps.plan.outcome }}"
+          echo "<details><summary>Show Plan</summary>"
+          echo "```"
+          echo "${{ env.PLAN }}"
+          echo "```"
+          echo "</details>"
+          echo "*Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*" > comment.txt
           gh issue comment ${{ github.event.issue.number }} --body "$(cat comment.txt)"
 
       - name: Terraform Plan Status
