--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -1,4 +1,4 @@
-name: "Terraform-Test"
+name: "Terraform-Develop"
 
 on:
   pull_request:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   terraform:
-    name: "Deploy-Test-Environment"
+    name: "Deploy-Development-Environment"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,62 +18,54 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
-        with:
-          # terraform_version: 1.5.2:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+#        with:
+#          # terraform_version: 1.5.2:
+#          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-      - name: Terraform Format
-        id: fmt
-        run: terraform -chdir="./env/test" fmt -check
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: "us-west-2"
+
+#      - name: Terraform Format
+#        id: fmt
+#        run: terraform -chdir="./env/test" fmt -check
 
       - name: Terraform Init
         id: init
         run: |
-          export TF_WORKSPACE="test"
           terraform -chdir="./env/test" init -input=false
-          terraform workspace show
+#          terraform workspace select dev
 
       - name: Terraform Plan
         id: plan
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'push'
         run: |
-          export TF_WORKSPACE="test"
           terraform -chdir="./env/test" plan -input=false -no-color
-        continue-on-error: true
-
-      - uses: actions/github-script@0.9.0
-        if: github.event_name == 'pull_request'
-        env:
-          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
-            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-            #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
-
-            <details><summary>Show Plan</summary>
-
-            \`\`\`${process.env.PLAN}\`\`\`
-
-            </details>
-
-            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
-
-              
-            github.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            })
+#        continue-on-error: true
+#
+#      - name: Comment on push
+#        if: github.event_name == 'push'
+#        env:
+#          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+#        run: |
+#          echo "#### Terraform Format and Style 🖌${{ steps.fmt.outcome }}"
+#          echo "#### Terraform Initialization ⚙️${{ steps.init.outcome }}"
+#          echo "#### Terraform Plan 📖${{ steps.plan.outcome }}"
+#          echo "<details><summary>Show Plan</summary>"
+#          echo "```"
+#          echo "${{ env.PLAN }}"
+#          echo "```"
+#          echo "</details>"
+#          echo "*Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*" > comment.txt
+#          gh issue comment ${{ github.event.issue.number }} --body "$(cat comment.txt)"
 
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
         run: exit 1
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/test' && github.event_name == 'push'
-        run: |
-          export TF_WORKSPACE="test"
-          terraform -chdir="./env/test" apply -auto-approve
+        if: github.ref == 'refs/heads/develop' && github.event_name == 'pull_request' && github.event.pull_request.merged == true
+        run: terraform -chdir="./env/test" apply -auto-approve
