updated workflow to trigger on file changes in env path

--- a/.github/workflows/terraform-dev.yml
+++ b/.github/workflows/terraform-dev.yml
@@ -5,8 +5,10 @@ on:
     branches:
       - develop
   push:
-    branches:
-      - feature/dev-*
+    paths:
+      - 'env/dev/**.tf'
+#    branches:
+#      - feature/dev-*
 
 jobs:
   terraform:
