--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -5,8 +5,10 @@ on:
     branches:
       - test
   push:
-    branches:
-      - feature/test-*
+    paths:
+      - 'env/test/**.tf'
+#    branches:
+#      - feature/test-*
 
 jobs:
   terraform:
