--- a/.github/workflows/terraform-prod.yml
+++ b/.github/workflows/terraform-prod.yml
@@ -5,8 +5,10 @@ on:
     branches:
       - main
   push:
-    branches:
-      - feature/prod-*
+    paths:
+      - 'env/prod/**.tf'
+#    branches:
+#      - feature/prod-*
 
 jobs:
   terraform:
