--- a/.github/workflows/terraform-prod.yml
+++ b/.github/workflows/terraform-prod.yml
@@ -20,9 +20,9 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
-#        with:
-#          # terraform_version: 1.5.2:
-#          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+        with:
+          # terraform_version: 1.5.2:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
