updated backend to TF Cloud

--- a/.github/workflows/terraform-dev.yml
+++ b/.github/workflows/terraform-dev.yml
@@ -3,7 +3,7 @@ name: "Terraform-Develop"
 on:
   pull_request:
     branches:
-      - develop
+      - main
   push:
     paths:
       - 'env/dev/**.tf'
