--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -3,7 +3,7 @@ name: "Terraform-Test"
 on:
   pull_request:
     branches:
-      - test
+      - main
   push:
     paths:
       - 'env/test/**.tf'
